--- a/app/src/main/res/values/pref_values.xml
+++ b/app/src/main/res/values/pref_values.xml
@@ -96,4 +96,20 @@
         <item>clockwise</item>
         <item>counterclockwise</item>
     </string-array>
+
+    <!-- LED sides configuration -->
+    <string name="pref_key_led_side_top" translatable="false">pref_key_led_side_top</string>
+    <string name="pref_default_led_side_top" translatable="false">enabled</string>
+
+    <string name="pref_key_led_side_right" translatable="false">pref_key_led_side_right</string>
+    <string name="pref_default_led_side_right" translatable="false">enabled</string>
+
+    <string name="pref_key_led_side_bottom" translatable="false">pref_key_led_side_bottom</string>
+    <string name="pref_default_led_side_bottom" translatable="false">enabled</string>
+
+    <string name="pref_key_led_side_left" translatable="false">pref_key_led_side_left</string>
+    <string name="pref_default_led_side_left" translatable="false">enabled</string>
+
+    <string name="pref_key_bottom_gap" translatable="false">pref_key_bottom_gap</string>
+    <integer name="pref_default_bottom_gap" translatable="false">0</integer>
 </resources>
